--- a/exercise3.html
+++ b/exercise3.html
@@ -9,7 +9,28 @@
     </style>
 </head>
 <body>
-
+    <div class="Container">
+        <div class="item1">
+            <a class="box_text" href="https://schulich.ucalgary.ca/">SCHULICH School of Engineering</a>
+            <div class="dropdown">
+                <div>Home</div>
+                <div>About</div>
+                <div>Resarch</div>
+            </div>
+        </div>
+        <div class="item1">
+            <a class="box_text" href="https://www.ucalgary.ca/future-students/undergraduate/explore-programs/electrical-engineering">Electrical Engineering</a>
+        </div>
+        <div class="item1">
+            <a class="box_text" href="https://schulich.ucalgary.ca/chemical-petroleum/home">Chemical Engineering Department</a>
+        </div>
+        <div class="item1">
+            <a class="box_text" href="https://schulich.ucalgary.ca/biomedical/home">Biomedical Engineering Department</a>
+        </div>
+        <div class="item1">
+            <a class="box_text" href="https://schulich.ucalgary.ca/geomatics">Department of Geomatics Engineering</a>
+        </div>
+    </div>
      <div class="Container">
         <div class="item">
             <img src="schulich.png">
